--- a/Abank_Demo/app/src/main/res/layout/activity_main.xml
+++ b/Abank_Demo/app/src/main/res/layout/activity_main.xml
@@ -6,141 +6,112 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainActivity">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+   <FrameLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <RelativeLayout
+       <RelativeLayout
+           android:id="@+id/relativeLayout"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:background="@drawable/button_primary_bg">
 
-            android:id="@+id/activity"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/cardview_light_background">
+           <android.support.v7.widget.CardView
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_marginTop="80dp"
+               android:layout_marginBottom="80dp"
+               android:layout_marginLeft="16dp"
+               android:layout_marginRight="16dp"
+               app:cardCornerRadius="10dp"
+               app:cardElevation="22dp">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="80dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="80dp"
-                app:cardCornerRadius="7dp"
-                app:cardElevation="22dp">
+               <TextView
+                   style="@style/TextStyle.Heading"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="70dp"
+                   android:layout_gravity="center|top"
+                   android:text="Login"
+                   android:textAllCaps="true"
+                   android:textSize="20dp"/>
 
-                <TextView
-                    style="@style/TextStyle.Heading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|top"
-                    android:layout_marginTop="60dp"
-                    android:text="@string/login_dummy"
-                    android:textAllCaps="true"
-                    android:textSize="20sp" />
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="20dp"
+                   android:layout_gravity="center"
+                   android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="20dp"
-                    android:orientation="vertical">
+                   <android.support.design.widget.TextInputLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:textColorHint="@color/gray"
+                       app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColorHint="@color/gray"
-                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
+                       <android.support.design.widget.TextInputEditText
+                           android:id="@+id/edit_Email"
+                           style="@style/TextStyle"
+                           android:layout_width="match_parent"
+                           android:layout_height="wrap_content"
+                           android:layout_marginLeft="20dp"
+                           android:layout_marginRight="20dp"
+                           android:paddingBottom="10dp"
+                           android:background="@drawable/input_border_bottom"
+                           android:cursorVisible="true"
+                           android:gravity="center|left|bottom"
+                           android:hint="@string/email"
+                           android:inputType="textEmailAddress"
+                           android:maxLength="50"
+                           android:textColor="@color/black_effective"
+                           android:textSize="18sp"/>
+                   </android.support.design.widget.TextInputLayout>
 
-                        <EditText
-                            android:id="@+id/Email"
-                            style="@style/TextStyle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginRight="20dp"
-                            android:background="@drawable/input_border_bottom"
-                            android:cursorVisible="true"
-                            android:gravity="center|left|bottom"
-                            android:hint="@string/email"
-                            android:inputType="textEmailAddress"
-                            android:maxLength="50"
-                            android:paddingBottom="10dp"
-                            android:textColor="@color/black_effective"
-                            android:textSize="18sp" />
+                   <android.support.design.widget.TextInputLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:textColorHint="@color/gray"
+                       android:hint="@string/password"
+                       app:passwordToggleEnabled="true"
+                       app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
-                    </android.support.design.widget.TextInputLayout>
+                   <android.support.design.widget.TextInputEditText
+                       android:id="@+id/edit_Password"
+                       style="@style/TextStyle"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginTop="20dp"
+                       android:layout_marginLeft="20dp"
+                       android:layout_marginRight="20dp"
+                       android:paddingBottom="10dp"
+                       android:background="@drawable/input_border_bottom"
+                       android:cursorVisible="true"
+                       android:gravity="center|left|bottom"
+                       android:inputType="textPassword"
+                       android:maxLength="50"
+                       android:textColor="@color/black_effective"
+                       android:textSize="18sp"/>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"
-                        android:textColorHint="@color/gray"
-                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
-                        app:passwordToggleEnabled="true">
+                   </android.support.design.widget.TextInputLayout>
 
-                        <EditText
-                            android:id="@+id/Password1"
-                            style="@style/TextStyle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:layout_marginTop="30dp"
-                            android:layout_marginRight="20dp"
-                            android:background="@drawable/input_border_bottom"
-                            android:cursorVisible="true"
-                            android:gravity="center|left|bottom"
-                            android:inputType="textPassword"
-                            android:maxLength="50"
-                            android:paddingBottom="10dp"
-                            android:textColor="@color/black_effective"
-                            android:textSize="18sp" />
+                   <Button
+                       style="@style/Button.Primary"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_margin="15dp"
+                       android:layout_gravity="center"
+                       android:padding="10dp"
+                       android:text="Login"
+                       android:textSize="20sp"/>
 
-                    </android.support.design.widget.TextInputLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="20dp"
-                        android:orientation="horizontal">
+               </LinearLayout>
 
-                        <Button
-                            android:id="@+id/btnF"
-                            style="@style/Button.Primary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left"
-                            android:layout_margin="15dp"
-                            android:padding="10dp"
-                            android:textSize="18dp"
-                            android:src="@drawable/ic_fingerprint_black_24dp"/>
+           </android.support.v7.widget.CardView>
 
-                        <Button
-                            android:id="@+id/btnS"
-                            style="@style/Button.Primary"
-                            android:layout_width="200dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignRight="@id/btnFingerprint"
-                            android:layout_gravity="right"
-                            android:layout_margin="15dp"
-                            android:padding="10dp"
-                            android:textAlignment="center"
-                            android:text="@string/login"
-                            android:textSize="18dp" />
+       </RelativeLayout>
 
-                    </LinearLayout>
-                </LinearLayout>
 
-            </android.support.v7.widget.CardView>
-
-        </RelativeLayout>
-
-        <android.support.v4.widget.ContentLoadingProgressBar
-            android:id="@+id/address"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-
-    </FrameLayout>
+   </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
