--- a/Abank_Demo/app/src/main/res/values/colors.xml
+++ b/Abank_Demo/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="semi_gray">#979797</color>
     <color name="white">#ffffff</color>
     <color name="shadow">#d0d8dc</color>
+    <color name="light_gray">#dbdbdb</color>
 </resources>
